fix eval item option overflow

--- a/src/App.scss
+++ b/src/App.scss
@@ -85,7 +85,7 @@ button {
 		padding:0 6px;
 	}
 
-	input {
+	input:not([type="radio"]) {
 		background-color:#FFF;
 	}
 
