--- a/src/components/Panel/Panel.scss
+++ b/src/components/Panel/Panel.scss
@@ -324,6 +324,8 @@
 	font-size:0.85em;
 	font-weight:600;
 	-webkit-font-smoothing:antialiased;
+	height:32px;
+	align-items:center;
 }
 
 .table-panel-row {
