--- a/src/tabs/Evaluations/EvalForm/EvalForm.scss
+++ b/src/tabs/Evaluations/EvalForm/EvalForm.scss
@@ -149,6 +149,9 @@ form[name="eval"] {
 			color:#FFF;
 		}
 
+		span {
+			width:100%;
+		}
 	}
 	
 	.eval-item-textarea {
